--- a/netlify.toml
+++ b/netlify.toml
@@ -11,18 +11,15 @@
 
 [dev]
   command = "npm run start"
-  port = 8888
   targetPort = 4001
+  port = 8888
   publish = "_site"
   autoLaunch = true
-  framework = "#custom"
 
 [[redirects]]
-  from = "/.well-known/appspecific/*"
-  to = "/404.html"
-  status = 404
-  force = true
-  log_level = "silent"
+  from = "/*"
+  to = "/index.html"
+  status = 200
 
 [[redirects]]
   from = "/error"
@@ -38,7 +35,16 @@
 [[headers]]
   for = "/*"
   [headers.values]
-    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' https://js.stripe.com http://localhost:35729; style-src 'self' 'unsafe-inline'; img-src 'self' data: https://*.stripe.com; object-src 'none'; connect-src 'self' https://dev-rfi7yfcndb5e8ycp.us.auth0.com https://api.stripe.com ws://localhost:35729; frame-src 'self' https://js.stripe.com https://hooks.stripe.com;"
+    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' https://js.stripe.com https://esm.sh http://localhost:35729; style-src 'self' 'unsafe-inline'; img-src 'self' data: https://*.stripe.com; object-src 'none'; connect-src 'self' https://dev-rfi7yfcndb5e8ycp.us.auth0.com https://api.stripe.com ws://localhost:35729; frame-src 'self' https://js.stripe.com https://hooks.stripe.com;"
+
+
+[[headers]]
+  for = "/api/*"
+  [headers.values]
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Headers = "Content-Type, Authorization"
+    Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
+
 
 [[redirects]]
   from = "/api/*"
