--- a/netlify.toml
+++ b/netlify.toml
@@ -14,39 +14,16 @@
   publish = "_site"
   autoLaunch = true
 
+# API redirect MUST come before the catch-all
 [[redirects]]
-  from = "/*"
-  to = "/index.html"
+  from = "/api/*"
+  to = "/.netlify/functions/:splat"
   status = 200
-
-[[redirects]]
-  from = "/error"
-  to = "/error.html"
-  status = 200
+  force = true
 
 [[redirects]]
   from = "/api/webhooks/stripe"
   to = "/.netlify/functions/stripe-webhooks"
-  status = 200
-  force = true
-
-[[headers]]
-  for = "/*"
-  [headers.values]
-    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' https://js.stripe.com https://esm.sh http://localhost:35729; style-src 'self' 'unsafe-inline'; img-src 'self' data: https://*.stripe.com; object-src 'none'; connect-src 'self' https://dev-rfi7yfcndb5e8ycp.us.auth0.com https://api.stripe.com ws://localhost:35729; frame-src 'self' https://js.stripe.com https://hooks.stripe.com;"
-
-
-[[headers]]
-  for = "/api/*"
-  [headers.values]
-    Access-Control-Allow-Origin = "*"
-    Access-Control-Allow-Headers = "Content-Type, Authorization"
-    Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
-
-
-[[redirects]]
-  from = "/api/*"
-  to = "/.netlify/functions/:splat"
   status = 200
   force = true
 
@@ -65,3 +42,26 @@
   to = "/app/dashboard/"
   status = 200
   force = true
+
+[[redirects]]
+  from = "/error"
+  to = "/error.html"
+  status = 200
+
+# Catch-all MUST be last
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' https://js.stripe.com https://cdn.auth0.com https://esm.sh http://localhost:35729; style-src 'self' 'unsafe-inline'; img-src 'self' data: https://*.stripe.com https://cdn.auth0.com; object-src 'none'; connect-src 'self' https://dev-rfi7yfcndb5e8ycp.us.auth0.com https://cdn.auth0.com https://api.stripe.com https://lumoletters.com ws://localhost:35729; frame-src 'self' https://js.stripe.com https://hooks.stripe.com https://*.auth0.com;"
+
+[[headers]]
+  for = "/api/*"
+  [headers.values]
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Headers = "Content-Type, Authorization"
+    Access-Control-Allow-Methods = "GET, POST, PUT, DELETE, OPTIONS"
